# rust_demo

./: .gitignore  Cargo.toml  LICENSE  README.md
interfaces/github/: Cargo.toml
interfaces/github/stargazers/: Cargo.toml
interfaces/github/stargazers/src/: index.rs
projects/databases/: Cargo.toml  ENHANCED_ENDPOINT.md
projects/databases/migrations/2025-05-17-150127_create_repositories/: down.sql  up.sql
projects/databases/migrations/2025-05-17-150128_create_stars/: down.sql  up.sql
projects/databases/src/: lib.rs
projects/databases/src/db/: mod.rs  schema.rs
projects/databases/src/db/repository/: models.rs  queries.rs
projects/databases/src/db/star/: models.rs  queries.rs
projects/databases/src/endpoints/github/: mod.rs
projects/databases/src/endpoints/github/repo_stars/: mod.rs
projects/databases/src/endpoints/github/repo_stars/read_daily_data/: index.rs
projects/databases/src/endpoints/github/repo_stars/read_daily_graph/: index.rs
projects/databases/src/endpoints/github/repo_stars/read_per_day/: index.rs
projects/databases/src/endpoints/github/repo_stars/update/: index.rs
projects/databases/src/utils/: chart.rs  data_processing.rs  mod.rs
scripts/database/: run_postgres.sh  stop_postgres.sh
utils/trace/: Cargo.toml
utils/trace/src/: lib.rs
