[package]
name = "projects_databases"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "projects_databases"
path = "src/bin/main.rs"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
hyper = "1.6.0"
interfaces_github = { path = "../../interfaces/github" }
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full"] }
tracing = "0.1.41"
utils_trace = { path = "../../utils/trace" }
