[package]
name = "projects_databases"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "projects_databases"
path = "src/bin/main.rs"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
diesel = { version = "2", features = ["postgres", "chrono", "uuid", "r2d2"] }
hyper = "1.6.0"
serde = { version = "1.0.140", features = ['derive'] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full"] }
tracing = "0.1.41"
r2d2 = "0.8.10"
dotenvy = "0.15.7"

interfaces_github_stargazers = { path = "../../interfaces/github/stargazers" }
utils_trace = { path = "../../utils/trace" }